--- a/warcraftinder/src/App.css
+++ b/warcraftinder/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700,900');
 
 body {
-  margin: 0;
+  margin-top: 25px;
   padding: 0;
   font-family: 'Roboto', sans-serif;
   font-size: 20px;
@@ -89,7 +89,7 @@ header .fl:last-child {
 
 .person img {
 	width: 500px;
-	height: 700px;
+	height: 600px;
 	display: block;
 	object-fit: cover;
 }
